--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,6 @@ services:
       MYSQL_USER: ${DATABASE_USER}
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${ROOT_DATABASE_PASSWORD}
-    ports:
-      - '3306:3306'
     healthcheck:
       test: ["CMD-SHELL", "mysqladmin ping -h localhost"]
       start_period: 60s
@@ -18,10 +16,10 @@ services:
       retries: 3
 
   api:
-    build: .
+    build: src/api
     restart: always
     ports:
-      - '5000:5000'
+      - ${API_PORT}:5000
     depends_on:
       db:
         condition: service_healthy
@@ -29,3 +27,13 @@ services:
       - FLASK_ENV=${FLASK_ENV}
       - FLASK_APP=app.py
       - SQLALCHEMY_DATABASE_URI=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@db/data
+
+  client:
+    build: .
+    restart: always
+    tty: true
+    stdin_open: true
+    ports:
+      - ${CLIENT_PORT}:3000
+    environment:
+      - NODE_OPTIONS=--openssl-legacy-provider
